Revert "Fix horizontal scroll caused by btn-back width"
This reverts commit a2c50bd5e5288bacd9bbe8200c6972152da750a2.

--- a/_sass/_customize.scss
+++ b/_sass/_customize.scss
@@ -350,7 +350,7 @@ small {
 }
 
 .btn-back {
-  width: 100%;;
+  width: $text-width;
   margin: auto;
 }
 
